# PCV-3D

./: .gitattributes  .gitignore  README.en.md  README.md
config/: cgal_release_x64.props  pcl_12_debug_x64.props
data/: Download Video Data  from Google Drive.txt  boundary.pcd  planeinter.pcd
data/filter/: Angle.pcd
data/models/: Our method (texture).mtl
data/segmentation/: Plane_1.pcd  Plane_6.pcd  Plane_7.pcd  RG_PassThrough.pcd  RG_RadiusOutlierRemoval.pcd
doc/: win10+vs2019+pcl1.11.0.md
include/: BST.h  PCL.h  filters.h  main.h  surface.h  txture.h
mask_rcnn/: labelme_model_94.pth
mask_rcnn/labelme/: train.txt  val.txt
mask_rcnn/labelme/images/: 10.json  100.json  101.json  102.json  103.json  14.json  15.json  16.json  17.json  19.json  2.json  20.json  22.json  24.json  26.json  29.json  3.json  30.json  31.json  35.json  36.json  37.json  38.json  39.json  4.json  43.json  44.json  45.json  49.json  52.json  53.json  54.json  56.json  59.json  6.json  60.json  61.json  63.json  65.json  67.json  (+19 more)
maxscript/: planeinter.txt  planeinter1.txt  poinT3d.ms  test.max  test1.max  trans(侧视图).max  trans(正视图).max  trans(顶视图).max  trans.max
pointcloud/: CMakeLists.txt
pointcloud/config/: cgal_debug_x64.props  pcl_12_release_x64.props
pointcloud/data/filter/: StatisticalOutlierRemoval.pcd
pointcloud/data/io/: plane4.pcd  plane5.pcd
pointcloud/data/segmentation/: Plane_2.pcd  Plane_3.pcd  Plane_4.pcd  Plane_5.pcd  RegionGrowing.pcd
pointcloud/include/: bbox.h  boundary.h  calculate.h  process.h  projection.h  segmentation.h
pointcloud/src/: bbox.cpp  boundary.cpp  calculate.cpp  filters.cpp  process.cpp  projection.cpp  surface.cpp  texture.cpp
src/: BST.cpp  main.cpp  pcd.cpp  pcl.cpp  segmentation.cpp
(+1963 files in other folders)
